--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+#sudo: true
+
 language: node_js
 node_js:
   - "6"
@@ -12,3 +14,12 @@ addons:
       - g++-4.9
 before_install:
   - export CC="gcc-4.9" CXX="g++-4.9"
+deploy:
+  provider: releases
+  api_key: $CI_USER_TOKEN
+  file: 
+   - "$TRAVIS_BUILD_DIR/${TRAVIS_TAG}.node"
+
+  skip_cleanup: true
+  on:
+    tags: true
