--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WebSocket buffer utils",
   "main": "index.js",
   "scripts": {
-    "rebuild-tests": "node-gyp rebuild --msvs_version=2013",
+    "rebuild-tests": "node-gyp rebuild --msvs_version=2013"
   },
   "repository": {
     "type": "git",
